Extracting task partial

--- a/app/templates/tasks/index.haml
+++ b/app/templates/tasks/index.haml
@@ -3,24 +3,5 @@
     .task_list
       .tasks
         {{#tasks}}
-        .assigned.task.mine{"data-task-id" => "{{id}}", :id => "task_{{id}}", :class => 'status_{{status_name}}' }
-          .taskStatus
-            %span.task_status.task_counter{"data-task-id" => "{{id}}"} {{comments_count}}
-          .taskName
-            .expanded_actions{:style => "display: none"}
-              %a.full{:href => "/projects/{{project_id}}/tasks/{{id}}"} Full view
-              %a.hide{:href => "#"} Hide comments
-            %a.name{:href => "/projects/{{project_id}}/tasks/{{id}}"} {{name}}
-            %span.assigned_date
-            %span.assigned_user
-              %a{:href => "/users/frank"} {{user.first_name}}
-            .extended
-              %span.project
-                %a{:href => "/projects/{{project_id}}"}
-                  {{project.name}}
-                &rarr;
-              %span.task_list
-                %a{:href => "/projects/{{project_id}}/task_lists"}
-                  {{task_list.name}}
-          .clear
+        {{> task}}
         {{/tasks}}
