--- a/app/views/tasks/_task.haml
+++ b/app/views/tasks/_task.haml
@@ -8,8 +8,8 @@
     = task_status(task, :content)
   .taskName
     .expanded_actions{ :style => 'display: none' }
-      %a.full{ :href => project_task_path(project, task) } Full view
-      %a.hide{ :href => '#' } Hide comments
+      %a.full{ :href => project_task_path(project, task) }= t('.full_view')
+      %a.hide{ :href => '#' }= t('.hide_comments')
     = link_to h(task), [project, task], :class => :name
     %span.assigned_date= task.due_on ? due_on(task) : ''
     %span.assigned_user= task.assigned ? link_to(h(task.assigned.short_name), user_path(task.assigned.user)) : ''
