--- a/app/views/users/form/_notifications.haml
+++ b/app/views/users/form/_notifications.haml
@@ -6,6 +6,9 @@
   .check_box.notify
     = f.check_box :notify_tasks
     = f.label :notify_tasks, t('.notify_tasks')
+  .check_box.notify
+    = f.check_box :notify_pages
+    = f.label :notify_pages, t('.notify_pages')
 
 %br
 %h3= t('.notification_options')
