--- a/app/views/shared/_navigation.html.haml
+++ b/app/views/shared/_navigation.html.haml
@@ -4,12 +4,12 @@
 .nav_links
 
   -# Recent Activity
-  .el= link_to t('.recent_activity'), '#!/', :class => 'recent_activity'
+  .el= link_to t('.recent_activity'), '#!/', :class => 'recent_activity backboned'
 
   -# pending_tasks = current_user.nearest_pending_tasks
   -# My Tasks
-  .el#my_tasks_link= link_to t('.my_tasks'), '#!/my_tasks', :class => 'tasks'
-  .el= link_to t('.all_tasks'), '#!/all_tasks'
+  .el#my_tasks_link= link_to t('.my_tasks'), '#!/my_tasks', :class => 'tasks backboned'
+  .el= link_to t('.all_tasks'), '#!/all_tasks', :class => 'backboned'
   .el= link_to t('.calendars'), calendars_path, :class => 'calendar ajax'
 
   -# All Projects
