--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -13,6 +13,7 @@
     = stylesheet_link_tag 'cucumber', :media => :screen if Rails.env.cucumber?
     = trimmer_include_tag
     = sprockets_include_tag
+    = javascript_include_tag 'development' if Rails.env.development?
     = yield :js_includes
     = javascript_tag do
       = yield :js_templates
