Use facebox for confirming project deletion

--- a/app/styles/_facebox.sass
+++ b/app/styles/_facebox.sass
@@ -24,17 +24,20 @@
       padding: 0
       +box-shadow(rgba(black, .6) 0 0 6px)
     .facebox-extra
-      padding: 8px 65px 8px 10px
+      padding: 8px 10px 8px 10px
       min-height: 20px
       border-top: 1px solid #ddd
       position: relative
+      p
+        margin: 0px
       .description
         font-size: 12px
         color: #444
-      .close
-        position: absolute
+      .buttons
+        float: right
+      .facebutton
         top: 8px
-        right: 10px
+        margin-left: 3px
         font:
           size: 10px
           weight: bold
