--- a/app/views/shared/_search_bar.haml
+++ b/app/views/shared/_search_bar.haml
@@ -1,5 +1,6 @@
 - if current_user.can_search?
   .search_bar
     - form_tag search_path, :method => 'get', :class => 'search', :id => 'search' do
-      = text_field_tag :q, nil, :type => 'search', :id => :searchbox,
+      = text_field_tag :q, nil, :type => 'text', :id => :searchbox,
                                 :placeholder => t('search.placeholder')
+      %img{ :src => '/images/search.png' }
