Note no longer moves on mouse hover
Wow I'm so chuffed. I fixed this in under 2 minutes. My css skills must
be improving :)

--- a/app/styles/_pages.sass
+++ b/app/styles/_pages.sass
@@ -203,7 +203,7 @@
     a
       opacity: 1
     &.handle
-      display: block
+      display: inline
   .slotActions
     display: none
   &:hover .slotActions
