Inline tasks are now localside, no AJAX needed

--- a/app/styles/_tasks.sass
+++ b/app/styles/_tasks.sass
@@ -392,9 +392,9 @@ p.view_for_all
     text-decoration: underline
     padding-top: 2px
 
-.task_inline
+.task
   .thread
-    margin: 0 0 0 50px
+    margin: 0 0 30px 50px
     width: 590px
     .comment_header
       display: none
