--- a/app/templates/partials/comment.haml
+++ b/app/templates/partials/comment.haml
@@ -16,7 +16,7 @@
         <!-- TODO: hours logged for time tracking -->
         {{status_transition}}
       {{#assigned}}
-      %p.assigned_transition Assigned to {{full_name}}
+      %p.assigned_transition Assigned to {{full_name user}}
       {{/assigned}}
       {{{body_html}}}
       <!-- TODO: uploads -->
