Search: Quick results, history, backbone

--- a/app/styles/_layout.sass
+++ b/app/styles/_layout.sass
@@ -34,7 +34,7 @@ div.column_wrap
   font-size: 12px
   left: 0
   width: $column_width
-  background: #e6edf5
+  background: $sidebar_bkg
   overflow: hidden
   div.column
     select
@@ -57,7 +57,7 @@ div.aux_wrap
   width: $aux_width
   right: 0
   border-left: 1px solid #B7B7B7
-  background: #e6edf5
+  background: $sidebar_bkg
   overflow: hidden
   a
     color: black
