--- a/app/styles/_shared.sass
+++ b/app/styles/_shared.sass
@@ -6,6 +6,7 @@ $link: #259bad
 $link_hover: #df5249
 $comments_left_border: #f2f2f2
 $comments_bkg: #fafafa
+$sidebar_bkg: #e6edf5
 
 $column_width: 190px 
 $aux_width: 200px
