WIP: Introducing the Today tab

--- a/app/styles/_sidebar.sass
+++ b/app/styles/_sidebar.sass
@@ -71,6 +71,10 @@
       background-image: url(/famfamfam/comment.png)
     &.tasks
       background-image: url(/famfamfam/tick.png)
+    &.today
+      background-image: url(/famfamfam/weather_sun.png)
+    &.all_tasks
+      background-image: url(/famfamfam/timeline_marker.png)
     &.time
       background-image: url(/famfamfam/time.png)
     &.pages
