--- a/app/styles/_sidebar.sass
+++ b/app/styles/_sidebar.sass
@@ -24,6 +24,8 @@
       font-size: 11px
       +rounded(10px)
       +box-shadow(inset 0 1px 1px rgba(0, 0, 0, 0.5))
+      &.red
+        background-color: #b00
     &.selected, &.children-selected, &.selected:hover, &.children-selected:hover
       background: lighten($navbar, 20)
       +gradient(#a0b0d0, #6f83ab)
@@ -101,12 +103,8 @@
       background-image: url(/famfamfam/layers.png)
     &.loading
       background-image: url(/images/loading.gif)
-    &.show_more, &.show_less
-      font-size: 10px
-      color: #777
     &.project, &.more
       padding-left: 5px
 
 .more_links
   margin-left: -15px
-
