--- a/app/views/teambox_datas/_user_map.haml
+++ b/app/views/teambox_datas/_user_map.haml
@@ -1,6 +1,7 @@
+= autocomplete_import_users
 - user = users[user_map[0]]
 %tr{:class => ''}
   %td
     %label{:for => "user_map_#{user_map[0]}"}= "#{user['first_name']} #{user['last_name']} (@#{user_map[0]})"
-  %td=  select_tag "teambox_data[user_map][#{user_map[0]}]", options_for_select(options_for_user_map, user_map[1]), :id => "user_map_#{user_map[0]}"
+  %td=  text_field_tag "teambox_data[user_map][#{user_map[0]}]", user_map[1], :id => "user_map_#{user_map[0]}", :class => 'user'
   %td=  errors_for @data, "user_map_#{user_map[0]}"
