Put Page js object in readonly mode if user can't update project
- Now project commenters can't reorder slots

Conflicts:

	app/javascripts/pages.js

--- a/app/views/pages/show.haml
+++ b/app/views/pages/show.haml
@@ -25,7 +25,7 @@
       = render 'dividers/new', :project => @current_project, :page => @page, :divider => Divider.new
       = render 'uploads/form', :project => @current_project, :page => @page, :upload => Upload.new(:page_id => @page.id)
   
-  #slots
+  #slots{:class => slots_classes}
     = render :partial => 'slot', :collection => @page.slots.with_widgets, :locals => {:page => @page, :project => @current_project}
   
   .page_slot.pageFooter#page_slot_footer{:slot => -1}
