Fix calendar script
- merge with 'timcharper/calendar_date_select'
- Improve the helper
- Rewrite the callback

--- a/app/views/task_lists/_date_fields.haml
+++ b/app/views/task_lists/_date_fields.haml
@@ -2,7 +2,7 @@
 .date_fields
   .pick_date
     = f.label :start_on, t('task_lists.fields.start_on_html')
-    = embedded_date_picker(f, :start_on)
+    = date_picker(f, :start_on)
   .pick_date
     = f.label :finish_on, t('task_lists.fields.finish_on_html')
-    = embedded_date_picker(f, :finish_on)
+    = date_picker(f, :finish_on)
