Fix, calendar helpers don't take options for now

--- a/app/views/comments/_fields.haml
+++ b/app/views/comments/_fields.haml
@@ -63,7 +63,7 @@
               = conversation_form.select :status, task_statuses_for_select, {}, :disabled => true
               = conversation_form.select :assigned_id, [], {}, :'data-assigned' => conversation_form.object.assigned_id, :disabled => true
             .fields
-              = date_picker(conversation_form, :due_on, false, :disabled => true)
+              = date_picker(conversation_form, :due_on)
           .submit
             = link_to t('common.cancel'), '#cancel_conversion', :class => 'cancel'
             = f.submit t('comments.convert_form.submit'), :'data-disable-with' => t('comments.new.sending'), :disabled => true
