WIP: Primers with videos

--- a/app/styles/_primers.sass
+++ b/app/styles/_primers.sass
@@ -1,3 +1,4 @@
+// old primers
 #primer
   padding: 10px 0 10px
   p
@@ -28,3 +29,21 @@
       li
         font-size: 12px
         margin-bottom: 5px
+
+// Used for primers inline in teambox3.2
+.primer_wrapper
+  text-align: center
+  .primer
+    border: 1px solid #ccc
+    display:  inline-block
+    padding: 10px 30px
+    border-radius:  10px
+    background-color: #f4f4f4
+    text-align: center
+    margin-top: 20px
+    box-shadow: inset #CCC 1px 1px 3px
+    h2
+      font-size: 16px
+      font-weight: bold
+    iframe
+      margin: 20px
