--- a/app/templates/partials/task.haml
+++ b/app/templates/partials/task.haml
@@ -30,7 +30,7 @@
       {{#first_comment}}{{> comment}}{{/first_comment}}
       {{#if hidden_comments_count}}
       .more_comments
-        %a{ :href => "{{host}}/activities/{{id}}/show_thread?thread_type={{type}}", :'data-remote' => "true" }
+        %a{ :href => "/activities/{{id}}/show_thread?thread_type={{type}}", :'data-remote' => "true" }
         Show {{hidden_comments_count}} previous comments
       {{/if}}
       {{#recent_comments}}{{> comment}}{{/recent_comments}}
