--- a/app/templates/projects/overlay.haml
+++ b/app/templates/projects/overlay.haml
@@ -1,25 +1,25 @@
 {{#project}}
 .overlay
   %p.title
-    %a{ :href => "/projects/{{permalink}}" }
+    %a{ :href => "#!/projects/{{permalink}}" }
       {{name}}
   .sections
     %p
-      %a.recent_activity{ :href => "/projects/{{permalink}}" }
+      %a.recent_activity{ :href => "#!/projects/{{permalink}}" }
         = t('shared.navigation.recent_activity')
     %p
-      %a.conversations{ :href => "/projects/{{permalink}}/conversations" }
+      %a.conversations{ :href => "#!/projects/{{permalink}}/conversations" }
         = t('shared.navigation.conversations')
     %p
-      %a.tasks{ :href => "/projects/{{permalink}}/task_lists" }
+      %a.tasks{ :href => "#!/projects/{{permalink}}/task_lists" }
         = t('shared.navigation.tasks')
     %p
-      %a.pages{ :href => "/projects/{{permalink}}/pages" }
+      %a.pages{ :href => "#!/projects/{{permalink}}/pages" }
         = t('shared.navigation.pages')
     %p
-      %a.files{ :href => "/projects/{{permalink}}/uploads" }
+      %a.files{ :href => "#!/projects/{{permalink}}/uploads" }
         = t('shared.navigation.files')
     %p
-      %a.people{ :href => "/projects/{{permalink}}/people" }
+      %a.people{ :href => "#!/projects/{{permalink}}/people" }
         = t('shared.navigation.people')
 {{/project}}
