Don't require confirming email to start using Teambox

--- a/app/styles/application.sass
+++ b/app/styles/application.sass
@@ -87,3 +87,12 @@ div.column_wrap h2
     text-decoration: none
   a
     text-decoration: underline
+
+.top_notice
+  font-size: 12px 
+  padding: 2px
+  background: #ffd
+  border-bottom: #dd5 1px solid
+  text-align: center
+  a.button
+    margin: 10px
