--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -21,6 +21,7 @@
     = load_javascript_user_data
     = archived_project_strip(@current_project)
     = render 'shared/keyboard'
+    = render 'shared/confirm_email'
     #header_wrap
       = header
     = configure_this_organization
