--- a/app/views/users/unconfirmed_email.haml
+++ b/app/views/users/unconfirmed_email.haml
@@ -9,6 +9,6 @@
 %ul
   %li= t('.resend_html', :link => unconfirmed_email_user_path(current_user, :resend => true))
   %li= t('.spam')
-  %li= t('.wrong_address_html', :link => logout_path)
+  %li= t('.wrong_email_html', :link => account_settings_path)
 
 %p= t('.problems_html', :support => link_to(Teambox.config.support, Teambox.config.support))
