Adding titles to backbone views

--- a/app/styles/_layout.sass
+++ b/app/styles/_layout.sass
@@ -141,6 +141,10 @@ p.flash-notice
     border-left: 1px solid #ddd
     height: 19px
     display: inline-block
+    &#view_title
+      right: none
+      left: 10px
+      border: none
     a
       display: inline-block
       padding: 0 5px
