--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -42,7 +42,8 @@
         .content_wrap
           .separator
             %span.left.unfold_sidebar= link_to "&rarr;".html_safe, "#"
-            All Projects
+            %span#view_title
+              All Projects
             %span.unfold_aux= link_to "&larr;".html_safe, "#"
           .content#content
         .aux_wrap
