Introducing is_task pseudoattribute for threads

--- a/app/styles/_primers.sass
+++ b/app/styles/_primers.sass
@@ -36,7 +36,8 @@
   text-align: center
   .primer
     border: 1px solid #ccc
-    display:  inline-block
+    display: inline-block
+    width: 520px
     padding: 10px 30px
     border-radius:  10px
     background-color: #f4f4f4
