--- a/app/templates/partials/comment_form.haml
+++ b/app/templates/partials/comment_form.haml
@@ -27,11 +27,11 @@
         .google_docs_attachment_form_area{ :'data-object-name' => "task[comments_attributes][0]" }
           .fields
           %ul.file_list
-      {{#if assigned_id}}
+      {{#if is_task}}
       <a href="#hours" class="add_hours_icon hoverable" title="Log hours">Add hours to this task</a>
       {{/if}}
       <a href="#watchers" class="add_watchers hoverable" title="Notify people">Watchers</a>
-    {{#if assigned_id}}
+    {{#if is_task}}
     .task_actions
       <label for="task_status">Status</label>
       %select#task_status{ :name => "task[status]" }
