--- a/app/views/shared/_navigation.html.haml
+++ b/app/views/shared/_navigation.html.haml
@@ -82,5 +82,4 @@
       .el= link_to t('.show_all_organizations'), organizations_path, :class => 'more ajax'
 
   -# More options
-  .el#show_more= link_to t('.show_more'), "#", :class => 'show_more'
-  .el.extra{ :style => 'display: none' }= link_to t('.time'), time_path, :class => 'ajax time'
+  .el.extra= link_to t('.time'), time_path, :class => 'ajax time'
