--- a/app/views/google_docs/authorization_required.haml
+++ b/app/views/google_docs/authorization_required.haml
@@ -1,3 +1,3 @@
 #google_docs_authorization_required
   %p= t('google_docs.authorization_required')
-  = link_to t('google_docs.authorize_link'), authorize_google_docs_path, :class => :button
+  = link_to t('google_docs.authorize_link'), '/auth/google', :class => :button
