--- a/app/views/shared/_navigation.html.haml
+++ b/app/views/shared/_navigation.html.haml
@@ -25,7 +25,8 @@
     .contained
       .el= link_to t('.recent_activity'), project_path(project), :class => 'recent_activity ajax'
       .el= link_to t('.conversations'), project_conversations_path(project), :class => 'conversations ajax'
-      .el= link_to t('.tasks'), project_task_lists_path(project), :class => 'tasks ajax'
+      .el{:id => "project_#{project.permalink}_task_lists"}
+        = link_to t('.tasks'), "#!#{project_task_lists_path(project)}", :class => 'tasks backboned'
       - if time_tracking_enabled? and project.tracks_time
         .el= link_to t('.time'), project_time_path(project), :class => 'time ajax'
       .el= link_to t('.pages'), project_pages_path(project), :class => 'pages ajax'
