--- a/app/views/teambox_datas/_import_fields.haml
+++ b/app/views/teambox_datas/_import_fields.haml
@@ -20,6 +20,6 @@
       %th
     = map_table_for_data(@data)
   .target_project.many_fields
-    %label{:for => 'teambox_data_target_organization'}= t('.in_organization')
-    = select_tag "teambox_data[target_organization]", options_for_select(options_for_target_organization, @data.target_organization)
+    %label{:for => 'teambox_data_organization_id'}= t('.in_organization')
+    = select_tag "teambox_data[organization_id]", options_for_select(options_for_organization, @data.organization_id)
     = errors_for @data, "target_organization"
